# otacon

./: .gitignore  README.md  main.py  pydantic_core-2.14.6-cp311-cp311-macosx_10_7_x86_64.whl  pyproject.toml
assets/: comment_metadata_keys (2013).txt  comment_metadata_keys (2022).txt  de-kommentare-gesamt.txt  monthly-counts.txt  nikki-regex.txt  post_object_keys_oct-2021.txt  pronoun-flair-regex.txt  they-forms_w_contractions.txt  they-regex-final.txt  they_forms_regex.txt
doc/: comment_keys_old-data.txt  comment_keys_recent-data.txt
otacon/: argument_handling.py  data_types.py  finalize.py  main.py  prep_input.py  prep_output.py  pushshift_handling.py  sampling.py
tests/: test_otacon.py
